# es4all

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  DEVNOTES.md  GAMELISTS.md  LICENSE.md  README.md  README_es4armbian.md  RELEASE_NOTES.md  SYSTEMS.md  THEMES.md  _boot2.sh  _boot3.sh  compat.h  getPoFromWebsite.sh  opensans_license.txt
locale/: CMakeLists.txt  checkLocale.sh  emulationstation2.pot
locale/lang/ar/LC_MESSAGES/: emulationstation2.po
locale/lang/ca/LC_MESSAGES/: emulationstation2.po
locale/lang/cs_CZ/LC_MESSAGES/: emulationstation2.po
locale/lang/cy_GB/LC_MESSAGES/: emulationstation2.po
locale/lang/de/LC_MESSAGES/: emulationstation2.po
locale/lang/el/LC_MESSAGES/: emulationstation2.po
locale/lang/en_GB/LC_MESSAGES/: emulationstation2.po
locale/lang/es/LC_MESSAGES/: emulationstation2.po
locale/lang/es_ES/LC_MESSAGES/: emulationstation2.po
locale/lang/es_MX/LC_MESSAGES/: emulationstation2.po
locale/lang/eu_ES/LC_MESSAGES/: emulationstation2.po
locale/lang/fi_FI/LC_MESSAGES/: emulationstation2.po
locale/lang/fr/LC_MESSAGES/: emulationstation2.po
locale/lang/gl_ES/LC_MESSAGES/: emulationstation2.po
locale/lang/he/LC_MESSAGES/: emulationstation2.po
locale/lang/hu/LC_MESSAGES/: emulationstation2.po
locale/lang/id_ID/LC_MESSAGES/: emulationstation2.po
locale/lang/it/LC_MESSAGES/: emulationstation2.po
locale/lang/ja_JP/LC_MESSAGES/: emulationstation2.po
locale/lang/ko/LC_MESSAGES/: emulationstation2.po
locale/lang/nb_NO/LC_MESSAGES/: emulationstation2.po
locale/lang/nl/LC_MESSAGES/: emulationstation2.po
locale/lang/nn_NO/LC_MESSAGES/: emulationstation2.po
locale/lang/oc_FR/LC_MESSAGES/: emulationstation2.po
locale/lang/pl/LC_MESSAGES/: emulationstation2.po
locale/lang/pt_BR/LC_MESSAGES/: emulationstation2.po
locale/lang/pt_PT/LC_MESSAGES/: emulationstation2.po
locale/lang/ro_RO/LC_MESSAGES/: emulationstation2.po
locale/lang/ru_RU/LC_MESSAGES/: emulationstation2.po
locale/lang/tr/LC_MESSAGES/: emulationstation2.po
(+364 files in other folders)
